<resources>
    <string name="app_name" translatable="false">Ticket</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_offers">Offers</string>
    <string name="title_activity_login" translatable="false">Login</string>
    <string name="error_occurred">An error occurred</string>
    <string name="loading">Loading…</string>
    <string name="title_activity_payments">Payments Manager</string>
    <string name="title_activity_ticket_data" translatable="false">Ticket</string>
    <string name="title_activity_report">History</string>
    <string name="title_activity_search">Search Results</string>
    <string name="title_activity_users">Users</string>
    <string name="title_activity_user_data">Create User</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="permissions">Permissions</string>
    <string name="log_out" translatable="false">Log Out</string>
    <string name="has_no_account">I don\'t have an account</string>
    <string name="has_account">I already have an account</string>
    <string name="new_payment">New payment type</string>
    <string name="identification">Identification(optional)</string>
    <string name="observations">Observations</string>
    <string name="price">Price</string>
    <string name="save">Save</string>
    <string name="name_must_fill">Name must be filled</string>
    <string name="username_must_fill">Username must be filled</string>
    <string name="password_must_fill">Must have a password</string>
    <string name="password_must_match">Passwords must match</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="report">Report</string>
    <string name="manage_offers">Manage Offers</string>
    <string name="manage_payment">Manage Payment</string>
    <string name="manage_users">Manage Users</string>
    <string name="manage_tickets">Manage Tickets</string>
    <string name="incorrect_username_password">Incorrect username or password</string>
    <string name="username_already_exists">User already exists</string>
    <string name="offer_added">Offer has been added</string>
    <string name="payment_added">Payment has been added</string>
    <string name="ticket_added">Ticket created successfully</string>
    <string name="user_added">User created</string>
    <string name="username_letters_numbers">Username must only contain letters and numbers</string>
    <string name="icon">icon</string>
    <string name="info">Info</string>
    <string name="no_description">Sorry, no description given to this activity</string>
    <string name="info_home">You can access your options by opening the menu on the left</string>
    <string name="info_report">You can view all that were sold in a period by setting a start and a end date</string>
    <string name="info_login">Put your username and password below to login.\n\nIf you don\'t have one, ask your manager.\n\nIf you want to create a new group, you need to create an account</string>
    <string name="info_main">Welcome to our app.\n\nIf you don\'t have an account you can create one by clicking the button on the bottom</string>
    <string name="info_offers">The offers that are activated are those that are available to be sold</string>
    <string name="info_payments">All acceptable payments types are displayed below, if you want to create a new one, just type on the bar at the bottom</string>
    <string name="info_search_results">The tickets below are those you\'ve searched</string>
    <string name="info_sign_up">We need your information to create an account for you</string>
    <string name="info_ticket_data">If you want, you can put something to identify the buyer of this ticket.\n\nYou need to put the amount of offers that are going to be sold by increasing and decreasing each offer.</string>
    <string name="info_user_data">You need to give us some information about this new user, including what areas of the app he will have access</string>
    <string name="info_users">All users that work in this app with you are displayed in here.\n\nYou can create new ones by clicking on the floating button at the bottom</string>
    <string name="payment_not_completed">Payment is not completed</string>
    <string name="must_buy_something">You must buy something</string>
    <string name="offers">Offers</string>
    <string name="payments">Payments</string>
    <string name="history">History</string>
    <string name="total">Total</string>
    <string name="sold">Sold: </string>
    <string name="no_items">Loading...</string>
    <string name="title_activity_pay_ticket">Payment</string>
    <string name="info_pay_ticket">Insert payment types below.\n\nYou need to fill until the amount of the right is equal 0.\n\nWhen the amount is marked as red, it means that the consumer must pay, when marked as green it means that the payment is completed or you should give the consumer the change</string>
    <string name="cust">Cust</string>
    <string name="to_be_payed">To be payed</string>
    <string name="username_password_changed">Your password has been changed</string>
    <string name="offer_deleted">Offer deleted</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="no">No</string>
    <string name="payment_deleted">Payment type deleted</string>
    <string name="user_deleted">User deleted</string>
    <string name="ticket_updated">Ticket updated</string>
    <string name="offer_updated">Offer updated</string>
    <string name="user_updated">User updated</string>
    <string name="ticket_deleted">Ticket deleted</string>
    <string name="title_activity_insert_user">Create User</string>
    <string name="title_activity_update_user">Edit User</string>
    <string name="change_password">Change password</string>
    <string name="info_update_user">Você pode alterar o nome e as permissões de um usuário aqui</string>
    <string name="title_activity_change_pass">ChangePassActivity</string>
    <string name="info_change_pass">Put your old password on the first field and the desired password on the next two fields</string>
    <string name="old_pass_must_match">Old passsword must be correct</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="info_settings">Settings</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="no_connection">No internet connection</string>
    <string name="filter_only">So filtrados</string>
    <string name="sell">Vender</string>
</resources>
