<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/nameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="5"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/priceEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="5"
            android:hint="@string/price"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorBackgroundFloating"
        android:text="@string/save"/>

</LinearLayout>