<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_user_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:clipToPadding="false"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.danielspeixoto.ticket.view.activity.UserDataActivity"
    tools:showIn="@layout/activity_insert_user">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="16dp"/>

        <Button
            android:id="@+id/changePassButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorBackgroundFloating"
            android:text="@string/change_password"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/permissions"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <com.danielspeixoto.ticket.view.custom.RecyclerList
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/adapter_permission"/>

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
